Added sr.no. into the cart page

--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -947,13 +947,13 @@
                   </div>
               </div>
   
-              <button class="btn-close-xs position-absolute top-0 end-0 js-cart-item-remove"></button>
+              <!-- <button class="btn-close-xs position-absolute top-0 end-0 js-cart-item-remove"></button> -->
           </div>
-          {% endfor %}
+         
           <hr class="cart-drawer-divider" />
+          {% endfor %}
   
       </div>
-  
       <div class="cart-drawer-actions position-absolute start-0 bottom-0 w-100">
           <hr class="cart-drawer-divider" />
           <div class="d-flex justify-content-between">
