--- a/templates/core/cart.html
+++ b/templates/core/cart.html
@@ -25,6 +25,7 @@
                 <table class="cart-table">
                     <thead>
                         <tr>
+                            <th>S.No.</th>
                             <th>Product</th>
                             <th></th>
                             <th>Price</th>
@@ -37,6 +38,7 @@
                     <tbody>
                         {% for product_id, item in cart_data.items  %}
                         <tr>
+                            <th>{{ forloop.counter }}</th>
                             <td>
                                 <div class="shopping-cart__product-item">
                                     <img loading="lazy" src="{{item.image}}" width="120" height="120"
