Added cancellation and refund policy page

--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -805,6 +805,8 @@
                                     class="menu-link menu-link_us-s text-white">Shipping Policy</a></li>
                                     <li class="sub-menu__item"><a href="/termsandconditions"
                                       class="menu-link menu-link_us-s text-white">T&C</a></li>
+                                      <li class="sub-menu__item"><a href="/cancellationandrefund"
+                                        class="menu-link menu-link_us-s text-white">Cancellation & Refund Policy</a></li
                         <li class="sub-menu__item"><a href="/blog" class="menu-link menu-link_us-s text-white">Blog</a></li>
                         <li class="sub-menu__item"><a href="/contact-us"
                                 class="menu-link menu-link_us-s text-white">Contact Us</a>
