Replace deal of the week section with static photo

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -514,346 +514,28 @@
 
     <div class="mb-5 pb-4"></div>
 
-    <section class="product-single container product-single__type-9">
-        {% for deal in deal_of_week %}
-        <div class="row">
-            <h2 class="section-title text-uppercase mb-1 mb-md-3 pb-xl-2 mb-xl-4">Deal of the
-                <strong style="color:#004818 !important">Week</strong>
-            </h2>
-          <div class="col-lg-7">
-            <div class="product-single__media" data-media-type="vertical-thumbnail">
-              <div class="product-single__image">
-                <div class="swiper-container">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide product-single__image-item">
-                      <img
-                        loading="lazy"
-                        class="h-auto"
-                        src="{{deal.image.url}}"
-                        width="674"
-                        height="674"
-                        alt=""
-                      />
-                      <a
-                        data-fancybox="gallery"
-                        href="{{deal.image.url}}"
-                        data-bs-toggle="tooltip"
-                        data-bs-placement="left"
-                        title="Zoom"
-                      >
-                        <svg
-                          width="16"
-                          height="16"
-                          viewBox="0 0 16 16"
-                          fill="none"
-                          xmlns="http://www.w3.org/2000/svg"
-                        >
-                          <use href="#icon_zoom" />
-                        </svg>
-                      </a>
-                    </div>
-                    {% for image in product_images %}
-                    <div class="swiper-slide product-single__image-item">
-                      <img
-                        loading="lazy"
-                        class="h-auto"
-                        src="{{ image.images.url }}"
-                        width="674"
-                        height="674"
-                        alt=""
-                      />
-                      <a
-                        data-fancybox="gallery"
-                        href="{{ image.images.url }}"
-                        data-bs-toggle="tooltip"
-                        data-bs-placement="left"
-                        title="Zoom"
-                      >
-                        <svg
-                          width="16"
-                          height="16"
-                          viewBox="0 0 16 16"
-                          fill="none"
-                          xmlns="http://www.w3.org/2000/svg"
-                        >
-                          <use href="#icon_zoom" />
-                        </svg>
-                      </a>
-                    </div>
-                    {% endfor %}
+    <style>
+      /* Apply basic styles to the video container */
+      .video-containerr {
+        max-width: 90%; /* Adjust this value to your desired maximum width */
+        margin: 0 auto; /* Center the container horizontally */
+        overflow: hidden;
+        position: relative;
+        margin-bottom: 2rem;
+      }
+      
+      /* Add additional mobile-responsive styles as needed */
+      @media (max-width: 768px) {
+        /* For screens with a width of 768px or less */
+        .video-containerr {
+        max-width: 100%; /* Reset the maximum width for smaller screens if needed */
+        }
+      }
+      </style>
     
-                  </div>
-                  <div class="swiper-button-prev">
-                    <svg
-                      width="7"
-                      height="11"
-                      viewBox="0 0 7 11"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <use href="#icon_prev_sm" />
-                    </svg>
-                  </div>
-                  <div class="swiper-button-next">
-                    <svg
-                      width="7"
-                      height="11"
-                      viewBox="0 0 7 11"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <use href="#icon_next_sm" />
-                    </svg>
-                  </div>
-                </div>
-              </div>
-              <div class="product-single__thumbnail">
-                <div class="swiper-container">
-                  <div class="swiper-wrapper">
-    
-                    <div class="swiper-slide product-single__image-item">
-    
-                      <img
-                        loading="lazy"
-                        class="h-auto"
-                        src="{{deal.image.url}}"
-                        width="104"
-                        height="104"
-                        alt=""
-                      />
-                    </div>
-                    {% for image in product_images %}
-                    <div class="swiper-slide product-single__image-item">
-    
-                      <img
-                        loading="lazy"
-                        class="h-auto"
-                        src="{{ image.images.url }}"
-                        width="104"
-                        height="104"
-                        alt=""
-                      />
-                    </div>
-                    {% endfor %}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-5">
-
-            <h1 class="product-single__name">{{deal.title}}</h1>
-            <div class="product-single__rating">
-              <div class="reviews-group d-flex">
-                <svg
-                  class="review-star"
-                  viewBox="0 0 9 9"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <use href="#icon_star" />
-                </svg>
-                <svg
-                  class="review-star"
-                  viewBox="0 0 9 9"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <use href="#icon_star" />
-                </svg>
-                <svg
-                  class="review-star"
-                  viewBox="0 0 9 9"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <use href="#icon_star" />
-                </svg>
-                <svg
-                  class="review-star"
-                  viewBox="0 0 9 9"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <use href="#icon_star" />
-                </svg>
-                <svg
-                  class="review-star"
-                  viewBox="0 0 9 9"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <use href="#icon_star" />
-                </svg>
-              </div>
-              <span class="reviews-note text-lowercase text-secondary ms-1"
-                >5 star rated
-              </span>
-            </div>
-            <div class="product-single__price">
-              <span class="current-price">₹ {{deal.price}} <span class="old_price" style="text-decoration: line-through; text-decoration-color: red;">₹{{deal.old_price}}</span> </span>
-              <img src="{% static 'images/deal_of_the_week.jpg' %}" width="100px"/>
-            </div>
-    
-            <div class="product-single__meta-info">
-              <div class="meta-item">
-                <label>SKU:</label>
-                <span>{{deal.sku}}</span>
-              </div>
-              <div class="meta-item">
-                <label>HSN Code:</label>
-                <span>{{deal.hsn_code}}</span>
-              </div>
-              <div class="meta-item">
-                <label>Application:</label>
-                <span>{{deal.application}}</span>
-              </div>
-              <div class="meta-item">
-                <label>Packing size:</label>
-                <span>{{deal.packing_size}}</span>
-              </div>
-              <div class="meta-item">
-                <label>Material:</label>
-                <span>{{deal.material}}</span>
-              </div>
-              <div class="meta-item">
-                <label>Specifications:</label>
-                <span>{{deal.specifications}}</span>
-              </div>
-            </div>
-            <form name="addtocart-form" method="post">
-    
-              {% for variant in product_variants %}
-              <div class="product-single__swatches">
-                <div class="product-swatch text-swatches">
-                  <label>{{ variant.title }}</label>
-    
-                  <div class="swatch-list">
-                    {% for variant_type in product_variant_types %}
-                    {% if variant_type.product_variant == variant %}
-                    <input type="radio" name="size" id="swatch-1" />
-                    <label
-                      class="swatch js-swatch"
-                      for="swatch-1"
-                      aria-label="{{ variant_type.variant_title }}"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      title="{{ variant_type.variant_title }}"
-                      >{{ variant_type.variant_title }}</label
-                    >
-                    {% endif %}
-                    {% endfor %}
-                  </div>
-    
-                </div>
-              </div>
-              {% endfor %}
-              <div class="product-single__addtocart">
-                <div class="qty-control position-relative">
-                  <input
-                    type="number"
-                    name="quantity"
-                    value="1"
-                    id="product-quantity-{{products.pid}}"
-                    min="1"
-                    class="qty-control__number text-center product-quantity-{{products.pid}}"
-                  />
-                  <div class="qty-control__reduce">-</div>
-                  <div class="qty-control__increase">+</div>
-                </div>
-                <!-- .qty-control -->
-                <input type="hidden" value="{{deal.pid}}" class="product-id-{{deal.pid}}">
-                <input type="hidden" value="{{deal.title}}" class="product-title-{{products.pid}}">
-                <input type="hidden" value="{{deal.price}}" class="product-price-{{deal.pid}}">
-                <input type="hidden" value="{{deal.sku}}" class="product-sku-{{deal.pid}}">
-                <input type="hidden" value="{{deal.image.url}}" class="product-image-{{deal.pid}}">
-                <button
-                  type="submit"
-                  class="btn btn-primary btn-addtocart js-open-aside add-to-cart-btn"
-                  id="add-to-cart-btn"
-                  data-index="{{deal.pid}}"
-                  data-aside="cartDrawer"
-                >
-                  Add to Cart
-                </button>
-              </div>
-            </form>
-            <div class="product-single__addtolinks">
-              <share-button class="share-button">
-                <button
-                  class="menu-link menu-link_us-s to-share border-0 bg-transparent d-flex align-items-center"
-                >
-                  <svg
-                    width="16"
-                    height="19"
-                    viewBox="0 0 16 19"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <use href="#icon_sharing" />
-                  </svg>
-                  <span>Share</span>
-                </button>
-                <details
-                  id="Details-share-template__main"
-                  class="m-1 xl:m-1.5"
-                  hidden=""
-                >
-                  <summary class="btn-solid m-1 xl:m-1.5 pt-3.5 pb-3 px-5">
-                    +
-                  </summary>
-                  <div
-                    id="Article-share-template__main"
-                    class="share-button__fallback flex items-center absolute top-full left-0 w-full px-2 py-4 bg-container shadow-theme border-t z-10"
-                  >
-                    <div class="field grow mr-4">
-                      <label class="field__label sr-only" for="url">Link</label>
-                      <input
-                        type="text"
-                        class="field__input w-full"
-                        id="url"
-                        value=""
-                        placeholder="Link"
-                        onclick="this.select();"
-                        readonly=""
-                      />
-                    </div>
-                    <button class="share-button__copy no-js-hidden">
-                      <svg
-                        class="icon icon-clipboard inline-block mr-1"
-                        width="11"
-                        height="13"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true"
-                        focusable="false"
-                        viewBox="0 0 11 13"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M2 1a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1V1H2zM1 2a1 1 0 00-1 1v9a1 1 0 001 1h7a1 1 0 001-1V3a1 1 0 00-1-1H1zm0 10V3h7v9H1z"
-                          fill="currentColor"
-                        ></path>
-                      </svg>
-                      <span class="sr-only">Copy link</span>
-                    </button>
-                  </div>
-                </details>
-              </share-button>
-              <script
-                src="{% static 'js/details-disclosure.js' %}"
-                defer="defer"
-              ></script>
-              <script src="{% static 'js/share.js' %}" defer="defer"></script>
-            </div>
-            <div class="product-single__meta-info">
-              <div class="meta-item">
-                <label>Categories:</label>
-                <span></span>
-              </div>
-              <div class="meta-item">
-                <label>Tags:</label>
-                <span>Plants, Grow Media, Grow, Atmoshpehere</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </section>
+      <div class="video-containerr">
+       <a href="/shop-category"><img src="{% static 'images/urban-farm-banner-image.jpg' %}" alt=""></a> 
+      </div>
 
     <div class="container">
 
