Added box shadows

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -533,7 +533,7 @@
       }
       </style>
     
-      <div class="video-containerr">
+      <div class="video-containerr my-5"  style="box-shadow: 0px 15px 25px yellow;">
        <a href="/shop-category"><img src="{% static 'images/urban-farm-banner-image.jpg' %}" alt=""></a> 
       </div>
 
@@ -643,7 +643,7 @@
             <div class="col-lg-9">
                 <section class="lookbook-products position-relative">
                     <img class="w-100 h-auto" loading="lazy" src="{% static 'images/home1/pop-over-2.jpg' %}" width="1903"
-                        height="709" alt="">
+                        height="709" alt="" style="box-shadow: 0px 25px 40px #8DC743;">
                     <button class="popover-point type2 position-absolute" style="left: 41%; top: 3%;"
                         data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content='
           <div class="popover-product">
