Added float in price category page

--- a/templates/core/category.html
+++ b/templates/core/category.html
@@ -394,7 +394,7 @@
                 <a href="{% url 'core:product_new' product.title %}">{{product.title}}</a>
               </h6>
               <div class="product-card__price d-flex">
-                <span class="money price">₹ {{ product.gst_inclusive_price }}</span>
+                <span class="money price">₹ {{ product.gst_inclusive_price|floatformat:"2" }}</span>
 
               </div>
               <div class="product-card__review d-flex align-items-center">
